--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -249,6 +249,31 @@ figure i {
   text-decoration: none;
   color: black;
 }
+.liste {
+  text-align: end;
+  text-transform: none;
+  unicode-bidi: isolate;
+  font-variant-numeric: tabular-nums;
+  white-space: pre;
+  color: black;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.liste button {
+  text-align: end;
+  text-transform: none;
+  unicode-bidi: isolate;
+  font-variant-numeric: tabular-nums;
+  white-space: pre;
+  color: black;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  display: list-item;
+  text-align: match-parent;
+}
 
 h1 {
   display: flex;
@@ -409,6 +434,15 @@ li:hover {
   color: #b1663c;
 }
 
+#logOut:hover {
+  color: #b1663c;
+}
+#logOut {
+  padding: 0 10px;
+  font-size: 1.2em;
+  background-color: transparent;
+  border: 0px solid #f2f2f2;
+}
 .liste :hover {
   color: #b1663c;
 }
