--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -279,11 +279,12 @@ header {
 }
 
 .modal-content {
+  box-sizing: border-box;
   background-color: #fefefe;
   margin: 15% auto;
+  width: 630px;
   padding: 20px;
   border: 1px solid #888;
-  width: 630px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   animation-name: animatetop;
   animation-duration: 0.4s;
@@ -335,24 +336,39 @@ header {
   display: flex;
   flex-direction: row;
   flex-flow: row wrap;
-  gap: 10px;
+  gap: 8px;
 }
-.modal-content figure {
-  /* display: flex;
-  flex-direction: row; */
+.figure {
+  position: relative;
 }
-.modal-content figure img {
-  /* display: flex;
-  flex-direction: row; */
-  width: 80px;
-  height: 100px;
+.figure img {
+  width: 78px;
+  height: 104px;
+}
+.texte-editer {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background-color: black;
+  padding: 4px;
+  border-radius: 5px;
+  color: white;
+}
+
+.move_icone {
+  position: absolute;
+  right: 28px;
+  top: 5px;
+  background-color: black;
+  padding: 4px;
+  border-radius: 5px;
+  color: white;
 }
 
 section {
   margin: 50px;
 }
 figure i {
-  margin-left: 50px;
 }
 .liste a {
   text-align: end;
