--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -283,7 +283,7 @@ header {
   background-color: #fefefe;
   margin: 15% auto;
   width: 630px;
-  height: 770px;
+  /* height: 770px; */
   padding: 20px;
   border: 1px solid #888;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
