--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -974,14 +974,15 @@ li:hover {
 }
 
 .gallery img {
-  width: 367px;
-  height: 489px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
 #contact {
   width: 50%;
   margin: auto;
+  padding-top: 20px;
 }
 
 #contact > * {
