--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -136,11 +136,14 @@ table {
 
 /** end reset css**/
 body {
-  max-width: 1400px;
-  margin: auto;
   font-family: "Work Sans";
   font-size: 14px;
   background-color: #fffef8;
+}
+
+.content {
+  max-width: 1140px;
+  margin: auto;
 }
 
 header {
@@ -169,10 +172,10 @@ header {
   position: relative;
   color: white;
 }
-#introduction figure .top_change {
-  padding-left: 57px;
-}
 
+.display_none {
+  display: none;
+}
 .button_modified {
   font-family: "Work Sans";
   font-style: normal;
@@ -933,7 +936,6 @@ li:hover {
 
 #introduction img {
   display: block;
-  margin: auto;
   width: 80%;
 }
 
@@ -982,7 +984,7 @@ li:hover {
 #contact {
   width: 50%;
   margin: auto;
-  padding-top: 20px;
+  padding-top: 50px;
 }
 
 #contact > * {
